.provarCaches/00D5f000005vwGkEAI/objects/rstk__sylimitd__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_sylimitd</customHelpPage>
    <description>sylimitd__c</description>
    <fields>
        <fullName>rstk__sylimitd_date__c</fullName>
        <label>Transaction Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sylimitd_recordcount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Record Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sylimitd_reftext__c</fullName>
        <label>Reference Text</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sylimitd_seq__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sylimitd_sylimits__c</fullName>
        <label>Transaction Object Counter</label>
        <referenceTo>rstk__sylimits__c</referenceTo>
        <relationshipLabel>Transaction Object Counter Details</relationshipLabel>
        <relationshipName>sylimitds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sylimitd_type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>SY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Transaction Object Counter Detail</label>
    <listViews>
        <fullName>rstk__Transaction_Counter_Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__sylimitd_type__c</columns>
        <columns>rstk__sylimitd_date__c</columns>
        <columns>rstk__sylimitd_reftext__c</columns>
        <columns>rstk__sylimitd_sylimits__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Transaction Counter Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Object Counter Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>